results/SVCOMP/specgen/log-ExSymExeI2F-2024_03_06_23_02_08.txt
class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result ==> test(x);
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> res > 0;
  //@ ensures !\result ==> res <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: non-static method test(int) cannot be referenced from a static context
  //@ ensures \result ==> test(x);
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:15: error: cannot find symbol
  //@ ensures \result ==> res > 0;
                          ^
  symbol:   variable res
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:16: error: cannot find symbol
  //@ ensures !\result ==> res <= 0;
                           ^
  symbol:   variable res
  location: class Main
3 errors

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result ==> test(x);
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: non-static method test(int) cannot be referenced from a static context
  //@ ensures \result ==> test(x);
                          ^
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result ==> new Main().test(x);
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> new Main().test(x);
                          ^
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result ==> test(x);
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: non-static method test(int) cannot be referenced from a static context
  //@ ensures \result ==> test(x);
                          ^
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result ==> new Main().test(x);
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> new Main().test(x);
                          ^
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result ==> test(x);
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: non-static method test(int) cannot be referenced from a static context
  //@ ensures \result ==> test(x);
                          ^
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result ==> new Main().test(x);
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> new Main().test(x);
                          ^
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result ==> test(x);
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: non-static method test(int) cannot be referenced from a static context
  //@ ensures \result ==> test(x);
                          ^
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result ==> new Main().test(x);
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> new Main().test(x);
                          ^
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result ==> test(x);
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: non-static method test(int) cannot be referenced from a static context
  //@ ensures \result ==> test(x);
                          ^
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result ==> test(x);  
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}

/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: non-static method test(int) cannot be referenced from a static context
  //@ ensures \result ==> test(x);  
                          ^
1 error

class Main {

  //@ requires x != 3 && x != 0;
 
  //@ ensures !\result ==> (x == 3 || x == 0);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}

